# cpp_5th_sem

task1/: CMakeLists.txt  main.cpp
task2/: CMakeLists.txt
task2/src/: filenames_parser.cpp  filenames_parser.h  main.cpp  stringtools.cpp  test.cpp
task3/: CMakeLists.txt
task3/src/: serializer.cpp  stringtools.cpp  stringtools.h
task4/: CMakeLists.txt
task4/src/: Image.cpp  Image.h  main.cpp
task5/: CMakeLists.txt
task5/src/: Image.cpp  Image.h  Pixel.h  main.cpp
task5/src/loaders/: ImageLoader.h  PGMImageLoader.cpp  PGMImageLoader.h  PPMImageLoader.cpp  PPMImageLoader.h
